# shupdofi

./: .gitattributes  .gitignore  Dockerfile  README.md  build.sh  dune-project  shupdofi-config-sample.toml  shupdofi.opam
.github/workflows/: docker-image.yml  static.yml  workflow.yml
github-pages/: index.html  style.css
lib/clt/: block.ml  block.mli  dune  modal.ml  modal.mli  model.ml  route_api.ml  route_api.mli  route_page.ml  router.ml  router.mli
lib/clt/action/: delete_directory.ml  delete_file.ml  dune  new_directory.ml  rename_directory.ml  rename_file.ml  selection.ml  upload_file.ml  user.ml
lib/clt/api/: api.ml  api.mli  dune  http.ml  (+1 more)
lib/clt/update/: delete_directory.ml  delete_file.ml  dune  new_directory.ml  rename_directory.ml  rename_file.ml  selection.ml  upload_file.ml  user.ml
lib/com/: action.ml  action.mli  area.ml  area.mli  area_content.ml  area_content.mli  date.ml  date.mli  datetime.ml  datetime.mli  delete_file.ml  directory.ml  directory.mli  dune  file.ml  file.mli  file_renamed.ml  file_renamed.mli  i18n.ml  i18n.mli  new_directory_created.ml  new_directory_created.mli  page.ml  path.ml  path.mli  rename_file.ml  rename_file.mli  selection.ml  selection.mli  size.ml  size.mli  sorting.ml  sorting.mli  time.ml  time.mli  uploaded.ml  uploaded.mli  user.ml  user.mli
lib/srv/: archive.ml  archive.mli  area.ml  area.mli  config.ml  config.mli  date.ml  date.mli  datetime.ml  datetime.mli  directory.ml  directory.mli  dune  file.ml  file.mli  path.ml  path.mli  time.ml  time.mli
test/: dune
www/: index.html  site.webmanifest
www/css/: style.css
www/js/: main.bc.js  shupdofi.bc.js
(+148 files in other folders)
